--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@ REACT_APP_SERVER_URL = http://localhost:5000
 REACT_APP_LIMIT_POST = 5
 REACT_APP_CLOUND_NAME = dklxyzuxd
 REACT_APP_UPLOAD_ASSETS_NAME = wqvka07w
-
+REACT_APP_FORMAT_DATE = DD/MM/YYYY
